src/parser/snapshots/monkey_language_server__parser__test__fn_expr_unhappy_2.snap
---
source: src/parser/test.rs
description: "fn(1+1) {}"
expression: result
---
[
    Function {
        token: Token(Function, "fn", (0,0)->(0,2)),
        params: Ok(
            [
                Err(
                    Err(UnexpectedToken("SyntaxError: Unexpected '<int>'."), (0,3)->(0,4)),
                ),
            ],
        ),
        body: Ok(
            Block {
                token: Token(LBrace, "{", (0,8)->(0,9)),
                statements: [],
                start: (0,8),
                end: (0,9),
            },
        ),
    },
]

===================================

fn(1+1) {}
   ^ [Error] SyntaxError: Unexpected '<int>'.
